Adding support for volume backups
Users can create, view, delete and restore volume backups

Change-Id: I85b372013c4573018d39178314e769ec8adfd3c7
Co-Authored-By: Lin Hua Cheng <lin-hua.cheng@hp.com>
Implements: blueprint volume-backups

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -168,6 +168,12 @@ OPENSTACK_HYPERVISOR_FEATURES = {
     'can_set_password': False,
 }
 
+# The OPENSTACK_CINDER_FEATURES settings can be used to enable optional
+# services provided by cinder that is not exposed by its extension API.
+OPENSTACK_CINDER_FEATURES = {
+    'enable_backup': False,
+}
+
 # The OPENSTACK_NEUTRON_NETWORK settings can be used to enable optional
 # services provided by neutron. Options currently available are load
 # balancer service, security groups, quotas, VPN service.
