--- a/tox.ini
+++ b/tox.ini
@@ -44,6 +44,10 @@ commands = /bin/bash run_tests.sh -N --integration
 basepython = python2.6
 commands = /bin/bash run_tests.sh -N --integration
 
+[testenv:docs]
+setenv = DJANGO_SETTINGS_MODULE=openstack_auth.tests.settings
+commands = python setup.py build_sphinx
+
 [tox:jenkins]
 downloadcache = ~/cache/pip
 
