--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ python-heatclient>=0.2.3
 python-keystoneclient>=0.7.0
 python-neutronclient>=2.3.4,<3
 python-novaclient>=2.17.0
+python-saharaclient>=0.6.0
 python-swiftclient>=1.6
 python-troveclient>=1.0.3
 pytz>=2010h
