Adding sahara client api code
This is the code that will interface with the sahara
library.  This is part of the merging of the sahara
dashboard into horizon.
This code was originally from:
https://github.com/openstack/sahara-dashboard

Change-Id: Icdec326e276e1cfeedae6d2fd6047051725f9566
Partial-Implements:  blueprint merge-sahara-dashboard
Co-Authored-By: Nikita Konovalov <nkonovalov@mirantis.com>
Co-Authored-By: Dmitry Mescheryakov <dmescheryakov@mirantis.com>

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -32,6 +32,7 @@ TEMPLATE_DEBUG = DEBUG
 # service API. For example, The identity service APIs have inconsistent
 # use of the decimal point, so valid options would be "2.0" or "3".
 # OPENSTACK_API_VERSIONS = {
+#     "data_processing": 1.1,
 #     "identity": 3,
 #     "volume": 2
 # }
@@ -492,3 +493,11 @@ FLAVOR_EXTRA_KEYS = {
         ('quota:outbound_average', _('Quota: Outbound average')),
     ]
 }
+
+# Indicate to the Sahara data processing service whether or not
+# automatic floating IP allocation is in effect.  If it is not
+# in effect, the user will be prompted to choose a floating IP
+# pool for use in their cluster.  False by default.  You would want
+# to set this to True if you were running Nova Networking with
+# auto_assign_floating_ip = True.
+# SAHARA_AUTO_IP_ALLOCATION_ENABLED = False
