--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ commands = /bin/bash run_tests.sh -N --no-pep8 --coverage {posargs}
 
 [testenv:py27dj14]
 basepython = python2.7
-commands = pip install django==1.4
+commands = pip install django>=1.4,<1.5
            /bin/bash run_tests.sh -N --no-pep8 {posargs}
 
 [testenv:py27dj15]
