Show default text for image format
This changes the default Horizon settings so that the list of image formats
starts with an entry that uses default text in accordance with other
dialogs.

Change-Id: If001fc49aad60e15b2c42afcf741499fcebae5f6
Partial-Bug: #1302256

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -184,7 +184,7 @@ OPENSTACK_NEUTRON_NETWORK = {
 # of supported image formats.
 # OPENSTACK_IMAGE_BACKEND = {
 #     'image_formats': [
-#         ('', ''),
+#         ('', _('Select format')),
 #         ('aki', _('AKI - Amazon Kernel Image')),
 #         ('ami', _('AMI - Amazon Machine Image')),
 #         ('ari', _('ARI - Amazon Ramdisk Image')),
