--- a/tox.ini
+++ b/tox.ini
@@ -60,6 +60,7 @@ exclude = .venv,.git,.tox,dist,*openstack/common*,*lib/python*,*egg,build,panel_
 # H702 Formatting operation should be outside of localization method call
 # H803 git commit title should not end with period (disabled on purpose, see bug #1236621)
 ignore = E127,E128,H701,H702,H803
+select = H236
 
 [hacking]
 import_exceptions = collections.defaultdict,
