--- a/tox.ini
+++ b/tox.ini
@@ -44,6 +44,11 @@ commands = /bin/bash run_tests.sh -N --integration {posargs}
 basepython = python2.6
 commands = /bin/bash run_tests.sh -N --integration {posargs}
 
+[testenv:jshint]
+commands = nodeenv -p
+           npm install jshint -g
+           /bin/bash run_tests.sh -N --jshint
+
 [testenv:docs]
 setenv = DJANGO_SETTINGS_MODULE=openstack_dashboard.test.settings
 commands = python setup.py build_sphinx
