--- a/tox.ini
+++ b/tox.ini
@@ -45,7 +45,7 @@ basepython = python2.6
 commands = /bin/bash run_tests.sh -N --integration {posargs}
 
 [testenv:docs]
-setenv = DJANGO_SETTINGS_MODULE=openstack_auth.tests.settings
+setenv = DJANGO_SETTINGS_MODULE=openstack_dashboard.test.settings
 commands = python setup.py build_sphinx
 
 [tox:jenkins]
