Make security rules with All translatable
The security rule names that include the word "All" should be
translatable.  I've included a SECURITY_GROUP_RULES value with
the 3 translatable rules from local_settings.py.example so that
we will actually have translations for those values.

Change-Id: Id21ac0e6ea328ab18f35f7711de356015db5f50a
Closes-bug: #1334031

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -381,19 +381,19 @@ LOGGING = {
 # It is specified in the form.
 SECURITY_GROUP_RULES = {
     'all_tcp': {
-        'name': 'ALL TCP',
+        'name': _('All TCP'),
         'ip_protocol': 'tcp',
         'from_port': '1',
         'to_port': '65535',
     },
     'all_udp': {
-        'name': 'ALL UDP',
+        'name': _('All UDP'),
         'ip_protocol': 'udp',
         'from_port': '1',
         'to_port': '65535',
     },
     'all_icmp': {
-        'name': 'ALL ICMP',
+        'name': _('All ICMP'),
         'ip_protocol': 'icmp',
         'from_port': '-1',
         'to_port': '-1',
