add httplib2 explicitly to requirements.txt
On Ubuntu 14.04+ whatever dark magic was installing httplib2 into
the venv for unit testing, is no longer doing it, as httplib2 was
not an explicit requirement.

It is clearly used in the code, and a dependency, so be explicit
about it.

Change-Id: I373b87dd4af414d58680d34c4de626ffa953cf57

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django>=1.4,<1.7
 django_compressor>=1.4
 django_openstack_auth>=1.1.4
 eventlet>=0.13.0
+httplib2>=0.7.5
 iso8601>=0.1.9
 kombu>=2.4.8
 lesscpy>=0.9j
