Add vCPU topology related extra flavor keys
Since there is support to define default parameters for the vCPU
topology using flavor extra specs in nova now, it will be very nice
to add these extra flavor keys to local_settings.py.example

Change-Id: I008ae27f1c47191d7fa08130f61cc46a205cb22d
Closes-bug: 1349931

--- a/openstack_dashboard/local/local_settings.py.example
+++ b/openstack_dashboard/local/local_settings.py.example
@@ -507,6 +507,12 @@ FLAVOR_EXTRA_KEYS = {
         ('quota:cpu_period', _('Quota: CPU period')),
         ('quota:vif_inbound_average', _('Quota: Inbound average')),
         ('quota:vif_outbound_average', _('Quota: Outbound average')),
+        ('hw:cpu_sockets', _('Quota: CPU sockets')),
+        ('hw:cpu_cores', _('Quota: CPU cores')),
+        ('hw:cpu_threads', _('Quota: CPU threads')),
+        ('hw:cpu_max_sockets', _('Quota: Max CPU sockets')),
+        ('hw:cpu_max_cores', _('Quota: Max CPU cores')),
+        ('hw:cpu_max_threads', _('Quota: Max CPU threads')),
     ]
 }
 
