Remove requirements style check
This is incorrect and should never have been added.  The order of
lines in requirements files affects the pip dependency resolver.
Therefore, while it's nice to add new packages in alphabetical
order, it must not be required.

Move pbr to the top of the list as it should always be installed
first.  Move hacking to the top of the test-requires list.

Change-Id: I81f7e75b77baccd12d9660dc009f30f2f2c891bc

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
+# Order matters to the pip dependency resolver, so sorting this file
+# changes how packages are installed.  New dependencies should be
+# added in alphabetical order, however, some dependencies may need to
+# be installed in a specific order.
+#
+# PBR should always appear first
+pbr>=0.6,!=0.7,<1.0
 # Horizon Core Requirements
 Django>=1.4,<1.7
 django_compressor>=1.4
@@ -11,7 +18,6 @@ kombu>=2.4.8
 # for SECURE_KEY generation
 lockfile>=0.8
 netaddr>=0.7.6
-pbr>=0.6,!=0.7,<1.0
 pyscss>=1.2.0  # MIT License
 python-ceilometerclient>=1.0.6
 python-cinderclient>=1.0.7
