Fix the requirements for a django library
Change from django_pyscss to django-pyscss
This is required because that is the way this library
is registered on PyPI. This is the link:
http://pypi.openstack.org/simple/django-pyscss/

Change-Id: I02cb1022f93dc03ba669db3899090cd2cc552066
Closes-bug: #1339918

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 Django>=1.4,<1.7
 django_compressor>=1.4
 django_openstack_auth>=1.1.4
-django_pyscss>=1.0.1  # BSD License (2 clause)
+django-pyscss>=1.0.1  # BSD License (2 clause)
 eventlet>=0.13.0
 httplib2>=0.7.5
 iso8601>=0.1.9
